--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "publish": "ng build --prod --aotpa"
+    "release": "ng build --prod --aot"
   },
   "private": true,
   "dependencies": {
