--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "release": "ng build --prod --aot"
+    "release": "ng build --prod"
   },
   "private": true,
   "dependencies": {
