--- a/web/src/test/resources/config/application.properties
+++ b/web/src/test/resources/config/application.properties
@@ -1,2 +1,6 @@
 gitlab.url=https://gitlab.tech.lastmile.com
 gitlab.page.size=2
+applicationId=test
+secret=test
+
+spring.datasource.url=jdbc:h2:mem:test
