--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -28,7 +28,8 @@
     "font-awesome": "4.7.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.7.6"
+    "zone.js": "^0.7.6",
+    "animate.css": "3.5.2"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0-beta.32.3",
