--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -29,7 +29,8 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.7.6",
-    "animate.css": "3.5.2"
+    "animate.css": "3.5.2",
+    "ng2-dragula": "1.3.1"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0-beta.32.3",
