--- a/web/pom.xml
+++ b/web/pom.xml
@@ -58,6 +58,11 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901-1.jdbc4</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
